# serial_monitor_rs

./: .gitignore  Cargo.toml  cross-compile.sh  ehh  mitac_issue  mitac_issue_2  testing123
src/: list_ports.rs  listening.rs  main.rs  printing.rs  serial_log.rs  serial_setup.rs
