[package]
name = "serial_testing"
version = "0.2.0"
edition = "2021"

[dependencies]
serialport = "4.3.0"
clap = { version = "4.5.6", features = ["derive"] }
chrono = "0.4.38"
tokio = { version = "1.38.0", features = ["full"] }
tokio-macros = { version = "0.2.0-alpha.6" }
crossterm = "0.27.0"
regex = "1.10.5"