[package]
name = "serial_testing"
version = "0.2.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.6", features = ["derive"] }
chrono = "0.4.38"
tokio-macros = { version = "0.2.0-alpha.6" }
crossterm = "0.27.0"
regex = "1.10.5"
colored = "2.1.0"
serialport = "4.3.0"
termion = "4.0.2"

[target.armv7-unknown-linux-gnueabi]
linker = "arm-linux-gnueabihf-gcc"
